--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,8 +4,13 @@
 <section id="logoIntro">
 	<div class="jumbotron green">
 		<div><img src="/images/logo3.png" alt="logo" class="logo"></div>
-		<p class="police slogan">Job<span class="red gros">$</span>hirt les vétements qui vous trouvent du boulot !</p>
+		<p class="police slogan">Job<span class="red dollar shad">$</span>hirt les vétements qui vous trouvent du boulot !</p>
+
 	</div>
+	 <!--message d'explication du concept-->
+        <div id="info">
+           <p class="">Soyez facilement repéré par les recruteurs !</p>
+        </div>
 </section>
 <!-- Section compte -->
 <section id="account">
